--- a/frontendmentors/qrcode/style.css
+++ b/frontendmentors/qrcode/style.css
@@ -28,6 +28,7 @@ body{
     transform: translate(-50%, -50%);
     position: absolute;
     border-radius: 20px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(0, 0, 0, 0.12) 0px 2px 16px 0px;
 }
 
 .box-blue{
